fixed position on safari

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+body,
+html {
+     position: fixed;
+   }
 
 body {
   margin: 0;
